# oracle-contract

./: .eslintrc  .gitignore  .solhint.json  README.md  cspell.json  hardhat.config.ts  package.json  slither.config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish.yml  test.yml
.openzeppelin/: unknown-1337.json
contracts/: NodesReader.sol  Oracle.sol  OracleJson.sol  OracleUpgradeable.sol  Reader.sol  ReaderFromConfig.sol  Verifier.sol
contracts/interfaces/: INodesReader.sol  IOracle.sol  IOracleJson.sol  IOracleUpgradeable.sol  IVerifier.sol
contracts/test/: OracleTester.sol  OracleUpgradeableTester.sol  VerifierMock.sol
dictionaries/: domain-terms.txt  libraries.txt  names.txt  skale-terms.txt  solidity.txt
interfaces/: package.json
migrations/: deploy.ts
predeployed/: .gitignore  MANIFEST.in  README.md  setup.cfg
predeployed/scripts/: build_package.sh  calculate_version.sh  generate_abi.py
predeployed/src/oracle_predeployed/: __init__.py  address.py  oracle_generator.py  oracle_upgradeable_generator.py
predeployed/test/: requirements.txt  test_oracle_generator.py  test_upgradeable_oracle_generator.py
predeployed/test/tools/: base_genesis.json  test_predeployed.py  test_solidity_project.py
scripts/: requirements.txt  test_deploy.sh
test/: Oracle.ts
test/utils/deploy/: oracle.ts
